# 2_LabSevenMatrices

./: .travis.yml  2_LabSevenMatrices.cpp  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: 2_LabSevenMatrices.hpp  catch.hpp
sources/: 2_LabSevenMatrices.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp
